[#50566361] - SIgn up page styles completed

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     			<div id="nav-sizer">
 	    			<a class="logo" href="index.html"><span class="logo-change">2</span>SIDED</a>
 	    			<a class="globe-nav" href="#">Login</a>
-	    			<a class="globe-nav" href="register.html">Register</a>
+	    			<a class="globe-nav" href="signup.html">Sign Up</a>
 	    			<a class="globe-nav" href="#">Browse</a>
     			</div>
     		</nav>
@@ -109,7 +109,7 @@
     				<div class="site-nav">
 	    				<p>Site Navigation</p>
 	    			
-		    			<a href="register.html">Create an Account</a>
+		    			<a href="signup.html">Create an Account</a>
 		    			<a href="#">Browse Decks</a>
 		    			<a href="#">Contact</a>
 		    			<a href="#">Help</a>
