[Delivers #50566361] - Styles for hover states finished and email placeholder corrected

--- a/signup.html
+++ b/signup.html
@@ -45,7 +45,7 @@
     				
     			<form>
     				<input type="text" name="username" placeholder="Username" />
-    				<input type="text" name="email" placeholder="ronswanson@pawneeparks.com" />
+    				<input type="text" name="email" placeholder="Email Address" />
     				<input type="password" name="password" placeholder="Password" />
     				
     				<button>Submit</button>
