[#50577915] - Login HTML created and styles started

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     		<nav>
     			<div id="nav-sizer">
 	    			<a class="logo" href="index.html"><span class="logo-change">2</span>SIDED</a>
-	    			<a class="globe-nav" href="#">Login</a>
+	    			<a class="globe-nav" href="login.html">Login</a>
 	    			<a class="globe-nav" href="signup.html">Sign Up</a>
 	    			<a class="globe-nav" href="#">Browse</a>
     			</div>
