--- a/user_dashboard.html
+++ b/user_dashboard.html
@@ -42,7 +42,7 @@
 	    			<a class="globe-nav user-dd" href="#"><img src="img/profile_placeholders/kmills006_placeholder.png" width="50" height="50" alt="user profile image" />kmills006
 	    			
 		    			<ul>
-		    				<li>View Profile</li>
+		    				<li class="user-profile">View Profile</li>
 		    				<li>Dashboard</li>
 		    				<li>Settings</li>
 		    				<li>Logout</li>
@@ -403,7 +403,7 @@
 
     </body>
     
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="js/vendor/jquery-1.10.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.0.min.js"><\/script>')</script>
         <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
         <script src="js/plugins.js"></script>
