[#51197061] - Study decks created and side bar with all the deck information styled

--- a/user_profile.html
+++ b/user_profile.html
@@ -55,7 +55,7 @@
     		</nav>
     		
     		<div class="content">
-    			<a href="user_dashboard.html">Back to Dashboard</a>
+    			<a href="user_dashboard.html" class="back-to-dash">Back to Dashboard</a>
     			
     			<aside>
     				<img src="img/profile_placeholders/kmills006_profile-placeholder.png" alt="Profile Image" width="200" height="200" />
